--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         <div class="about-box">
           <h2>About Us</h2>
-          <p>The Band Reflected &#91;orginally the bad bandits&#93; Was Started in 2021 by Band leader Kian Erikkson. They had 2 bassist and 1 drummiest.<br> Currnet memebers are: <br> Krue Spencer - The Brains <br> Kian Erikkson - Bassist <br> Willam Baynes - Gutairst<br> Lucas Dawson - Gutairst <br> and Noah Hare - Drummist  </p>
+          <p>The Band Reflected &#91;orginally the bad bandits&#93; Was Started in 2021 by Band leader Kian Eriksson. They had 2 bassist and 1 drummiest.<br> Currnet memebers are: <br> Krue Spencer - The Brains <br> Kian Eriksson - Bassist <br> Willam Baynes - Guitarist<br> Lucas Dawson - Gutairst <br> and Noah Hare - Drummer  </p>
         <a href="Music.html">Read More</a>
         </div>
       </div>
