--- a/socials.html
+++ b/socials.html
@@ -23,6 +23,9 @@
 <a href="https://www.tiktok.com/@reflected_offical?is_from_webapp=1&sender_device=pc">Tiktok</a>
 <br>
 <br>
+<a href="https://reflected.printify.me/products">Merch</a>
 <br>
 <br>
+  <br>
+  <br>
 <a href="https://www.youtube.com/channel/UCVKxQID_C-ZQwtdwHsGBv_A">Also A huge thanks to our tech manager for making this lovely site!</a>
