--- a/gallery.html
+++ b/gallery.html
@@ -60,11 +60,12 @@
                 <div class="limit-box">
                   <nav class="main-menu ">
                     <ul class="menu-area-main">
-                      <li > <a href="index.html">Home</a> </li>
+                         <li> <a href="index.html">Home</a> </li>
                       <li> <a href="about.html">About</a> </li>
                       <li> <a href="Music.html">Music </a> </li>
                       <li> <a href="gallery.html">Gallery</a> </li>
                       <li> <a href="contact.html">Contact</a> </li>
+                      <li> <a href="https://reflected.printify.me/products">Shop Now</a> </li>
                       <li> <a href="socials.html">Socials</a> </li>
 
       
