--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                       <li> <a href="Music.html">Music </a> </li>
                       <li> <a href="gallery.html">Gallery</a> </li>
                       <li> <a href="contact.html">Contact</a> </li>
-                      <li> <a href="https://reflected.printify.me/products">Shop Now</a> </li>
+                      <li> <a href="https://www.bonfire.com/store/reflected/">Shop Now</a> </li>
                       <li> <a href="socials.html">Socials</a> </li>
 
       
