--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
                       <li> <a href="Music.html">Music </a> </li>
                       <li> <a href="gallery.html">Gallery</a> </li>
                       <li> <a href="contact.html">Contact</a> </li>
-                      <li> <a href="https://www.bonfire.com/store/reflected/">Shop Now</a> </li>
+                      <li> <a href="https://reflected.printify.me/products">Shop Now</a> </li>
                       <li> <a href="socials.html">Socials</a> </li>
       
                       <li  > <a  class="last_manu" href="#"><img src="images/search_icon.png" alt="#" /></a> </li>
