--- a/socials.html
+++ b/socials.html
@@ -23,7 +23,7 @@
 <a href="https://www.tiktok.com/@reflected_offical?is_from_webapp=1&sender_device=pc">Tiktok</a>
 <br>
 <br>
-<a href="https://www.bonfire.com/store/reflected/">Merch By Bonfire</a>
+<a href="https://reflected.printify.me/products">Merch By Printify</a>
 <br>
 <br>
   <br>
