--- a/index.html
+++ b/index.html
@@ -190,7 +190,31 @@
 <!-- end abouts -->
 
 
-
+<!-- Shop -->
+<div id="Shop" class="Shop">
+  <div class="container-fluid padding_left3">
+    <div class="row display_boxflex">
+      <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
+       <div class="box_text">
+          <div class="titlepage">
+            <h2>Shop</h2>
+          </div>
+          <p>
+Introducing Reflected's new merch drop by Krue! Stylish and functional, this collection caters to diverse tastes. From sleek water bottles to trendy bags, elevate your wardrobe with graphic tees and stylish hoodies. Crafted from high-quality fabrics, these designs capture the essence of the brand. Complete your look with pants and shorts blending style and functionality. Slim-fit jeans to comfy joggers, there's something for everyone. Also, enjoy exclusive phone accessories, reflecting your personal style. A must-have for fans and fashion-forward individuals, Reflected's new merch drop offers a diverse range of high-quality products. Stay on-trend, showcase your love for Reflected!
+          </p>
+          <a href="https://reflected.printify.me/products">Browse Now</a>
+        </div>
+      </div> 
+    
+      <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 border_right">
+         <div class="upcomimg">
+           <figure><img src="images/Noah Hare .jpg" alt="#"/></figure>
+        </div>
+          </div>
+  </div>
+    </div>
+</div>
+<!-- end upcoming -->
 
 <!-- upcoming -->
 <div id="upcoming" class="upcoming">
